python/ql/test/3/query-tests/Imports/syntax_error/bad_encoding.py
"""Multi-line docstring




"""

# encoding:shift-jis

def f():
    print "Python の開発は、1990 年ごろから開始されています"
"""
